Adding a wait there's more slide

--- a/ladies-learning-ruby.html
+++ b/ladies-learning-ruby.html
@@ -1509,6 +1509,16 @@ my_hash = {
         <style>
           #rails .large-font { margin-top: 70px }
         </style>
+        <h3>But wait! There's more!</h3>
+        <p>There is way, way too much Ruby than can fit into a day.</p>
+        <p><img src='assets/images/waitmore.jpg'></p>
+        <p>Where do you go next?</p>
+      </article>
+
+      <article id='rails'>
+        <style>
+          #rails .large-font { margin-top: 70px }
+        </style>
         <h3>Ruby on Rails</h3>
         <p>Ruby became popular mostly because of Rails.</p>
         <section class='build'>
